# IRC_RUST_MSQC

./: .gitignore  Cargo.toml  README.md
example/: client_example.rs
src/: lib.rs  main.rs  token.rs
src/client/: client.rs  mod.rs  monitor.rs
src/server/: crypto.rs  facade.rs  handler.rs  mod.rs  models.rs  session.rs
src/utils/: mod.rs  token.rs
tools/: token_generator.rs
