[package]
name = "secure-irc-server"
version = "0.1.0"
edition = "2021"
authors = ["Suphakin Thaiwong"]
description = "A secure IRC server with token authentication and automatic message deletion"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
base64 = "0.21"
image = "0.24"
rand = "0.8"
ring = "0.17"
cidr = "0.2"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"

[lib]
name = "irc_server"
path = "src/lib.rs"

[[bin]]
name = "irc-server"
path = "src/main.rs"

[[bin]]
name = "token-generator"
path = "tools/token_generator.rs"

[profile.release]
opt-level = 3
lto = true
debug = false